--- a/style.css
+++ b/style.css
@@ -1,22 +1,13 @@
-#dragArea,
-#dropArea {
-    width: 400px;
-    padding: 40px;
-    border: 1px solid black;
-    margin-top: 20px;
-    text-align: center;
+.container {
+    border: 1px solid #ccc;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    display: inline-block;
+    vertical-align: top;
 }
 
-.container{
-    width: 240px;
-    height: 200px;
-    padding: 10px;
-    margin: 20px;
-    border: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-img{
-    width: 100%;
+.draggable-item {
+    max-width: 100%;
+    max-height: 100%;
 }
